<resources>
    <string name="app_name">mymobileAppAssignment</string>
    <string name="home">Home</string>
    <string name="Menu" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_detail">Order detail</string>
    <string name="rich_and_creamy_coffee_with_steamed_milk_and_smooth_foam_on_top">Rich and creamy coffee with steamed milk and smooth foam on top.</string>
    <string name="total_1_5">Total: 1.5$</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="plus">+</string>
    <string name="_1">1</string>
    <string name="mines">-</string>
    <string name="_1_5">1.5$</string>
    <string name="cappuccino">Cappuccino</string>
    <string name="coffee_image" />
    <string name="back" />
</resources>